[package]
name = "gqlforum-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gqlforum"

[dependencies]
serde = { version = "1", features = ["derive"] }
config = "0.13"

axum = "0.5"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["full"]}
cookie = "0.16"

nanoid = "0.4"
sha2 = "0.10"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

secrecy = { version = "0.8", features = ["serde"] }
validator = "0.15"
argon2 = { version = "0.4", features = ["std"] }

async-graphql-axum = "4"

[dependencies.async-graphql]
version = "4"
features = [ 
    "default", 
    "time",
    "tracing",
    "apollo_tracing",
]

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "uuid",
    "time",
    # "chrono",
    "migrate",
    "offline",
]
