[package]
name = "gqlforum-sycamore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = { version = "0.3", features = ["executor"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sycamore = { version = "0.8.0-beta.7", features = ["suspense"] }
reqwasm = "0.5"