[package]
name = "gqlforum-sycamore"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = { version = "0.3", features = ["executor"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sycamore = { version = "0.8.0-beta.7", features = ["suspense"] }
sycamore-router = "0.8.0-beta.7"
reqwasm = "0.5"
gloo-timers = { version = "0.2.3", features = ["futures"] }

console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.14"

[profile.release]
lto = true
opt-level = 's' 
codegen-units = 1